objects/Facility__c/Facility__c.object-meta.xml
<CustomObject>
    <description>Trang thiết bị phòng học</description>
    <label>Facility</label>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>