objects/Facility__c/fields/Class_room__c.field-meta.xml
<CustomField>
    <fullName>Class_room__c</fullName>
    <label>Class room</label>
    <referenceTo>Class_room__c</referenceTo>
    <relationshipLabel>Facilities</relationshipLabel>
    <relationshipName>Facilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>