objects/Facility__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>